refactoring and merge.

--- a/force-app/main/default/classes/Test_ArticleService.cls
+++ b/force-app/main/default/classes/Test_ArticleService.cls
@@ -9,40 +9,40 @@ public with sharing class Test_ArticleService {
     @IsTest
     public static void testCreateArticleWithoutDate() {
         Resource__c test = getResource(null, null);
-        System.assertEquals(null, test.Published_Date__c);
+        System.assertEquals(null, test.Posting_Date__c);
         System.assertEquals(null, test.Expiration_Date__c);
         test = getSelectResource(test.Id);
-        System.assertEquals(Date.today(), test.Published_Date__c);
+        System.assertEquals(Date.today(), test.Posting_Date__c);
         System.assertEquals(Date.today().addMonths(12), test.Expiration_Date__c);
     }
 
     @IsTest
     public static void testCreateArticleWithoutExpDate() {
         Resource__c test = getResource(Date.today(), null);
-        System.assertEquals(Date.today(), test.Published_Date__c);
+        System.assertEquals(Date.today(), test.Posting_Date__c);
         System.assertEquals(null, test.Expiration_Date__c);
         test = getSelectResource(test.Id);
-        System.assertEquals(Date.today(), test.Published_Date__c);
+        System.assertEquals(Date.today(), test.Posting_Date__c);
         System.assertEquals(Date.today().addMonths(12), test.Expiration_Date__c);
     }
 
     @IsTest
     public static void testCreateArticleWithoutPublishDate() {
         Resource__c test = getResource(null, Date.today());
-        System.assertEquals(null, test.Published_Date__c);
+        System.assertEquals(null, test.Posting_Date__c);
         System.assertEquals(Date.today(), test.Expiration_Date__c);
         test = getSelectResource(test.Id);
-        System.assertEquals(Date.today().addMonths(-12), test.Published_Date__c);
+        System.assertEquals(Date.today().addMonths(-12), test.Posting_Date__c);
         System.assertEquals(Date.today(), test.Expiration_Date__c);
     }
 
     @IsTest
     public static void testCreateArticleWrongDate() {
         Resource__c test = getResource(Date.today(), Date.today().addDays(-12));
-        System.assertEquals(Date.today(), test.Published_Date__c);
+        System.assertEquals(Date.today(), test.Posting_Date__c);
         System.assertEquals(Date.today().addDays(-12), test.Expiration_Date__c);
         test = getSelectResource(test.Id);
-        System.assertEquals(Date.today(), test.Published_Date__c);
+        System.assertEquals(Date.today(), test.Posting_Date__c);
         System.assertEquals(Date.today().addMonths(12), test.Expiration_Date__c);
     }
     // UPDATE TEST
@@ -51,11 +51,11 @@ public with sharing class Test_ArticleService {
     public static void testUpdateNullDate() {
         Resource__c test = getResource();
         test = getSelectResource(test.Id);
-        System.assertEquals(Date.today(), test.Published_Date__c);
+        System.assertEquals(Date.today(), test.Posting_Date__c);
         System.assertEquals(Date.today().addMonths(12), test.Expiration_Date__c);
         updateResource(test, null, null);
         test = getSelectResource(test.Id);
-        System.assertEquals(Date.today(), test.Published_Date__c);
+        System.assertEquals(Date.today(), test.Posting_Date__c);
         System.assertEquals(Date.today().addMonths(12), test.Expiration_Date__c);
     }
 
@@ -63,11 +63,11 @@ public with sharing class Test_ArticleService {
     public static void testUpdateNullExpDate() {
         Resource__c test = getResource();
         test = getSelectResource(test.Id);
-        System.assertEquals(Date.today(), test.Published_Date__c);
+        System.assertEquals(Date.today(), test.Posting_Date__c);
         System.assertEquals(Date.today().addMonths(12), test.Expiration_Date__c);
         updateResource(test, Date.today(), null);
         test = getSelectResource(test.Id);
-        System.assertEquals(Date.today(), test.Published_Date__c);
+        System.assertEquals(Date.today(), test.Posting_Date__c);
         System.assertEquals(Date.today().addMonths(12), test.Expiration_Date__c);
     }
 
@@ -75,11 +75,11 @@ public with sharing class Test_ArticleService {
     public static void testUpdateNullPublishDate() {
         Resource__c test = getResource();
         test = getSelectResource(test.Id);
-        System.assertEquals(Date.today(), test.Published_Date__c);
+        System.assertEquals(Date.today(), test.Posting_Date__c);
         System.assertEquals(Date.today().addMonths(12), test.Expiration_Date__c);
         updateResource(test, Date.today(), null);
         test = getSelectResource(test.Id);
-        System.assertEquals(Date.today(), test.Published_Date__c);
+        System.assertEquals(Date.today(), test.Posting_Date__c);
         System.assertEquals(Date.today().addMonths(12), test.Expiration_Date__c);
     }
 
@@ -87,18 +87,18 @@ public with sharing class Test_ArticleService {
     public static void testUpdateWrongDate() {
         Resource__c test = getResource();
         test = getSelectResource(test.Id);
-        System.assertEquals(Date.today(), test.Published_Date__c);
+        System.assertEquals(Date.today(), test.Posting_Date__c);
         System.assertEquals(Date.today().addMonths(12), test.Expiration_Date__c);
         updateResource(test, Date.today(), Date.today().addDays(-12));
         test = getSelectResource(test.Id);
-        System.assertEquals(Date.today(), test.Published_Date__c);
+        System.assertEquals(Date.today(), test.Posting_Date__c);
         System.assertEquals(Date.today().addMonths(12), test.Expiration_Date__c);
     }
 
     public static Resource__c getResource(Date publishDate, Date expDate) {
         Resource__c res = new Resource__c(
                 Name = 'Res-Tes',
-                Published_Date__c = publishDate,
+                Posting_Date__c = publishDate,
                 Expiration_Date__c = expDate,
                 Resource_Type__c = 'Articles',
                 Resource_Source__c = 'Study - Specific'
@@ -111,7 +111,7 @@ public with sharing class Test_ArticleService {
     }
 
     public static void updateResource(Resource__c resource, Date publishDate, Date expDate) {
-        resource.Published_Date__c = publishDate;
+        resource.Posting_Date__c = publishDate;
         resource.Expiration_Date__c = expDate;
         update resource;
     }
@@ -119,7 +119,7 @@ public with sharing class Test_ArticleService {
     public static Resource__c getSelectResource(Id idRes) {
         return [
                 SELECT
-                        Published_Date__c,
+                        Posting_Date__c,
                         Expiration_Date__c
                 FROM Resource__c
                 WHERE Id = :idRes
