--- a/force-app/main/default/classes/TestDataFactory.cls
+++ b/force-app/main/default/classes/TestDataFactory.cls
@@ -18,6 +18,14 @@ public class TestDataFactory {
             'IsVoted__c' => true
     };
 
+    private static final Map<String, Object> THERAPEUTIC_AREA_PATIENT_REQUIRED_FIELDS = new Map<String, Object>{
+            'Condition_Of_Interest_Order__c' => 0
+    };
+
+    private static final Map<String, Object> THERAPEUTIC_AREA_REQUIRED_FIELDS = new Map<String, Object>{
+            'Name' => 'Test'
+    };
+
     public static Integer fakeId_num = 1;
 
     public static String getFakeId(Schema.SObjectType sObjectType) {
@@ -25,6 +33,8 @@ public class TestDataFactory {
         return sObjectType.getDescribe().getKeyPrefix() +
                 '0'.repeat(12-result.length()) + result;
     }
+
+    /*getters without parameters - with default values for required fields*/
 
     public static Contact getContact() {
         return (Contact)getSObjectWithFilledFields(new Contact(), TestDataFactory.CONTACT_REQUIRED_FIELDS);
@@ -42,6 +52,16 @@ public class TestDataFactory {
         return (Resource_Action__c)getSObjectWithFilledFields(new Resource_Action__c(), TestDataFactory.RESOURCE_ACTION_REQUIRED_FIELDS);
     }
 
+    public static Therapeutic_Area_Patient__c getTherapeuticAreaPatient() {
+        return (Therapeutic_Area_Patient__c)getSObjectWithFilledFields(new Therapeutic_Area_Patient__c(), TestDataFactory.THERAPEUTIC_AREA_PATIENT_REQUIRED_FIELDS);
+    }
+
+    public static Therapeutic_Area__c getTherapeuticArea() {
+        return (Therapeutic_Area__c)getSObjectWithFilledFields(new Therapeutic_Area__c(), TestDataFactory.THERAPEUTIC_AREA_REQUIRED_FIELDS);
+    }
+
+    /*getters with parameters*/
+
     public static Contact getContact(Map<String, Object> fieldsValuesByName) {
         return (Contact)getSObjectWithFilledFields(TestDataFactory.getContact(), fieldsValuesByName);
     }
@@ -52,6 +72,14 @@ public class TestDataFactory {
 
     public static Participant__c getParticipant(Map<String, Object> fieldValuesByNames) {
         return (Participant__c)getSObjectWithFilledFields(TestDataFactory.getParticipant(), fieldValuesByNames);
+    }
+
+    public static Therapeutic_Area_Patient__c getTherapeuticAreaPatient(Map<String, Object> fieldValuesByNames) {
+        return (Therapeutic_Area_Patient__c)getSObjectWithFilledFields(TestDataFactory.getTherapeuticAreaPatient(), fieldValuesByNames);
+    }
+
+    public static Therapeutic_Area__c getTherapeuticArea(Map<String, Object> fieldValuesByNames) {
+        return (Therapeutic_Area__c)getSObjectWithFilledFields(TestDataFactory.getTherapeuticArea(), fieldValuesByNames);
     }
 
     private static SObject getSObjectWithFilledFields(SObject record, Map<String, Object> fieldValuesByNames) {
