--- a/force-app/main/default/classes/ParticipantStateRemote.cls
+++ b/force-app/main/default/classes/ParticipantStateRemote.cls
@@ -5,16 +5,19 @@
 public class ParticipantStateRemote {
     
     public class InitData{
-        Map<String, PEStatusState> peStatusStateMap = PEStatusState.STATUSES_MAP;
-        List<String> peStatusesPathList = PEStatusState.STATUS_STEPS_LIST;
-        Participant_Enrollment__c pe;
+        public Map<String, PEStatusState> peStatusStateMap = PEStatusState.STATUSES_MAP;
+        public List<String> peStatusesPathList = PEStatusState.STATUS_STEPS_LIST;
+        public Participant_Enrollment__c pe;
+        public Participant_Study_Enrollment__c pse;
     }
     
     @AuraEnabled
     public static String getInitData(){
         InitData initData = new InitData();
         Participant_Enrollment__c[] peList = ParticipantEnrollmentService.getParticipantEnrollmentsForParticipant();
-        if(peList.size() > 0) initData.pe = peList[0];
+        if(peList.size() > 0) {
+            initData.pe = peList[0];
+        }
         return JSON.serialize(initData);
     }
     
